fix: right gap

--- a/src/style/common.styl
+++ b/src/style/common.styl
@@ -61,7 +61,7 @@ input
     display inline-block
     content ""
     height  100%
-    margin-right -0.25em
+    // margin-right -0.25em
     vertical-align middle
 
   &>.v-center
